--- a/projects/ngx-aaa-datepicker/package.json
+++ b/projects/ngx-aaa-datepicker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-aaa-datepicker",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A datepicker that picks single, multiple and range type dates.",
   "author": "Md. Abdun Nahid",
   "repository": {
@@ -18,5 +18,8 @@
   "peerDependencies": {
     "@angular/common": "^7.1.0",
     "@angular/core": "^7.1.0"
+  },
+  "dependencies": {
+    "ngx-animating-datepicker": "^1.2.0"
   }
 }
